--- a/3. Longest Substring Without Repeating Characters.ipynb
+++ b/3. Longest Substring Without Repeating Characters.ipynb
@@ -8,20 +8,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def lengthOfLongestSubstring(self, s):\n",
-    "        char_set = set() # 存放字母\n",
+    "    def lengthOfLongestSubstring(self, s): # time: O(n), space: O(1) # time看起來是O(n^2)，但每個字符只被考慮2次，加入或刪除，總操作次數是O(2n) = O(n)\n",
+    "        char_set = set() # 存放字母 # space: O(1)\n",
     "        max_length = 0\n",
     "        left = 0\n",
-    "        for right, char in enumerate(s):\n",
+    "        for right, char in enumerate(s): # time: O(n)\n",
     "            print(f\"\\nchar = {char}\")\n",
     "            # 如果該字元已經在char_set中，就不斷刪除左邊界對應的字母，直到該字元不在char_set中\n",
-    "            while char in char_set: \n",
+    "            while char in char_set: # time: O(n)\n",
     "                char_set.remove(s[left])\n",
     "                print(f\"remove ({s[left]}) from ({s[left:right+1]}): char_set = {char_set}\", end = \"\")\n",
     "                left += 1\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +90,89 @@
        "3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"pwwkew\"\n",
+    "Solution().lengthOfLongestSubstring(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
+    "        hash_table = {} # 存儲字符及其索引位置 # space: O(1)\n",
+    "        result = 0 # 存儲最長不重複子字串的長度\n",
+    "        left = 0 # 存儲當前子字串的起始位置\n",
+    "\n",
+    "        for right in range(len(s)): # time: O(n)\n",
+    "            print(f\"\\n{left = }, {right = }, {s[right] = }\")\n",
+    "\n",
+    "            # 檢查右指針指向的字符是否不在hash_table中，或者其索引位置小於當前左指針位置(即字符存在，但不在當前slide window中)\n",
+    "            if (s[right] not in hash_table) or (hash_table[s[right]] < left):\n",
+    "                result = max(result, (right - left + 1))\n",
+    "                print(f\"success: {result = }, {hash_table = }\")\n",
+    "            else:\n",
+    "                left = hash_table[s[right]] + 1 # 更新左指針到上一次該字符出現的下一個位置\n",
+    "                print(f\"fail:     {left = }, {hash_table = }\")\n",
+    "            \n",
+    "            hash_table[s[right]] = right # 更新右指針的位置\n",
+    "\n",
+    "        return result\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "left = 0, right = 0, s[right] = 'p'\n",
+      "success: result = 1, hash_table = {}\n",
+      "\n",
+      "left = 0, right = 1, s[right] = 'w'\n",
+      "success: result = 2, hash_table = {'p': 0}\n",
+      "\n",
+      "left = 0, right = 2, s[right] = 'w'\n",
+      "fail:     left = 2, hash_table = {'p': 0, 'w': 1}\n",
+      "\n",
+      "left = 2, right = 3, s[right] = 'k'\n",
+      "success: result = 2, hash_table = {'p': 0, 'w': 2}\n",
+      "\n",
+      "left = 2, right = 4, s[right] = 'e'\n",
+      "success: result = 3, hash_table = {'p': 0, 'w': 2, 'k': 3}\n",
+      "\n",
+      "left = 2, right = 5, s[right] = 'w'\n",
+      "fail:     left = 3, hash_table = {'p': 0, 'w': 2, 'k': 3, 'e': 4}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
