--- a/1. Two Sum.ipynb
+++ b/1. Two Sum.ipynb
@@ -16,6 +16,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(n)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -24,9 +32,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hash_ = {}, num1 = 3, num2 = 3\n",
-      "hash_ = {3: 0}, num1 = 2, num2 = 4\n",
-      "hash_ = {3: 0, 2: 1}, num1 = 4, num2 = 2\n"
+      "num1 = 3, num2 = 3, hash_table = {}\n",
+      "num1 = 2, num2 = 4, hash_table = {3: 0}\n",
+      "num1 = 4, num2 = 2, hash_table = {3: 0, 2: 1}\n"
      ]
     },
     {
@@ -43,15 +51,15 @@
    "source": [
     "class Solution:\n",
     "    def twoSum(self, nums, target):\n",
-    "        hash_ = {}\n",
-    "        for i, num1 in enumerate(nums):\n",
-    "            num2 = target - num1\n",
-    "            print(f\"hash_ = {hash_}, num1 = {num1}, num2 = {num2}\")\n",
-    "            if num2 in hash_:\n",
-    "                return [hash_[num2], i]\n",
-    "                \n",
-    "            hash_[num1] = i\n",
+    "        hash_table = {}  # 儲存數字及其索引\n",
+    "        for idx, num1 in enumerate(nums):\n",
+    "            num2 = target - num1  # 計算目標值與當前元素的差值\n",
+    "            print(f\"{num1 = }, {num2 = }, {hash_table = }\")\n",
     "\n",
+    "            if num2 in hash_table:  # 如果差值存在於哈希表中\n",
+    "                return [hash_table[num2], idx]  # 返回差值的索引和當前元素的索引\n",
+    "            \n",
+    "            hash_table[num1] = idx  # 將當前元素及其索引存入哈希表\n",
     "\n",
     "nums = [3,2,4]\n",
     "target = 6\n",
@@ -66,6 +74,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n log n)**  \n",
+    "**空間複雜度: O(n)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -74,6 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "nums = [1, 2, 3, 4, 6, 7], target = 6\n",
+      "\n",
       "original: left = 0, right = 5\n",
       "( (nums[left] = 1) + (nums[right] = 7) = 8 ) > ( target = 6 )\n",
       "new: left = 0, right = 4\n",
@@ -105,6 +123,8 @@
     "    def twoSum(self, nums, target):\n",
     "        nums1 = nums.copy()\n",
     "        nums = sorted(nums)\n",
+    "        print(f\"{nums = }, {target = }\\n\")\n",
+    "        \n",
     "        left = 0\n",
     "        right = len(nums) - 1\n",
     "        while (nums[left] + nums[right]) != target:\n",
@@ -187,42 +207,10 @@
    ],
    "source": [
     "class Solution(object):\n",
-    "    def twoSum(self, nums, target):\n",
-    "        def sortList( nums):\n",
-    "            if len(nums) > 1:\n",
-    "                mid = len(nums) // 2\n",
-    "                left = nums[:mid]\n",
-    "                right = nums[mid:]\n",
-    "                print(f\"\\nleft = {left}, right = {right}\")\n",
-    "\n",
-    "                left1 = sortList(left)\n",
-    "                right1 = sortList(right)\n",
-    "                merge_list = merge(left1, right1)\n",
-    "                print(f\"merge_list = {merge_list}\")\n",
-    "            \n",
-    "            else:\n",
-    "                return nums\n",
-    "\n",
-    "            return merge_list\n",
-    "\n",
-    "        def merge(left, right):\n",
-    "            merge_list = []\n",
-    "            while left and right:\n",
-    "                if left[0] < right[0]:\n",
-    "                    merge_list.append(left.pop(0))\n",
-    "                else:\n",
-    "                    merge_list.append(right.pop(0))\n",
-    "\n",
-    "            if left:\n",
-    "                merge_list.extend(left) \n",
-    "            else:\n",
-    "                merge_list.extend(right)\n",
-    "\n",
-    "            return merge_list\n",
-    "            \n",
+    "    def twoSum(self, nums, target):          \n",
     "        nums1 = nums.copy()\n",
     "        print(\"<< sort values >>\")\n",
-    "        nums = sortList(nums)\n",
+    "        nums = self.sortList(nums)\n",
     "\n",
     "        print(\"\\n<< find index >>\")\n",
     "        left = 0\n",
@@ -246,6 +234,38 @@
     "                res.append(i)\n",
     "                \n",
     "        return res\n",
+    "\n",
+    "    def sortList(self, nums):\n",
+    "        if len(nums) > 1:\n",
+    "            mid = len(nums) // 2\n",
+    "            left = nums[:mid]\n",
+    "            right = nums[mid:]\n",
+    "            print(f\"\\nleft = {left}, right = {right}\")\n",
+    "\n",
+    "            left1 = self.sortList(left)\n",
+    "            right1 = self.sortList(right)\n",
+    "            merge_list = self.merge(left1, right1)\n",
+    "            print(f\"merge_list = {merge_list}\")\n",
+    "        \n",
+    "        else:\n",
+    "            return nums\n",
+    "\n",
+    "        return merge_list\n",
+    "\n",
+    "    def merge(self, left, right):\n",
+    "        merge_list = []\n",
+    "        while left and right:\n",
+    "            if left[0] < right[0]:\n",
+    "                merge_list.append(left.pop(0))\n",
+    "            else:\n",
+    "                merge_list.append(right.pop(0))\n",
+    "\n",
+    "        if left:\n",
+    "            merge_list.extend(left) \n",
+    "        else:\n",
+    "            merge_list.extend(right)\n",
+    "\n",
+    "        return merge_list\n",
     "\n",
     "\n",
     "nums = [1, 4, 2, 7, 3, 6]\n",
@@ -334,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
