--- a/20. Valid Parentheses.ipynb
+++ b/20. Valid Parentheses.ipynb
@@ -15,29 +15,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(n)**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['[']\n",
-      "['[', '(']\n",
-      "['[', '(', '{']\n",
-      "['[', '(']\n",
-      "['[']\n",
-      "[]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        stack = []\n",
+    "        hash_table = {\n",
+    "            \")\": \"(\",\n",
+    "            \"]\": \"[\",\n",
+    "            \"}\": \"{\"\n",
+    "        }\n",
+    "        \n",
+    "        for char in s:\n",
+    "            if char in hash_table.values(): # 如果是左括號，就放進stack\n",
+    "                stack.append(char)\n",
+    "            elif (stack == []) or (stack.pop() != hash_table[char]): # 如果是右括號，就檢查stack是否為空，或是pop出來的左括號是否與右括號對應\n",
+    "                return False\n",
+    "\n",
+    "        return stack == []\n",
+    "    \n",
+    "    \n",
+    "Solution().isValid(\"[({})]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
