--- a/217. Contains Duplicate.ipynb
+++ b/217. Contains Duplicate.ipynb
@@ -11,7 +11,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sorting\n",
+    "* 時間複雜度: O(n log n)\n",
+    "* 空間複雜度: O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
+    "        nums.sort()\n",
+    "        for i in range(1, len(nums)):\n",
+    "            if nums[i-1] == nums[i]:\n",
+    "                return True\n",
+    "        \n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### hash set\n",
+    "* 時間複雜度: O(n)\n",
+    "* 空間複雜度: O(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
+    "        hash_set = set()\n",
+    "        for num in nums:\n",
+    "            if num in hash_set:\n",
+    "                return True\n",
+    "            else:\n",
+    "                hash_set.add(num)\n",
+    "                \n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"img/217.jpg\" style=\"zoom:50%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### set\n",
+    "* 時間複雜度: O(n)\n",
+    "* 空間複雜度: O(n)"
    ]
   },
   {
@@ -28,8 +89,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
