--- a/121. Best Time to Buy and Sell Stock.ipynb
+++ b/121. Best Time to Buy and Sell Stock.ipynb
@@ -34,7 +34,7 @@
     "        base = prices[0]\n",
     "        profit = 0\n",
     "\n",
-    "        for price in prices:\n",
+    "        for price in prices[1:]:\n",
     "            if price < base:\n",
     "                base = price\n",
     "            \n",
@@ -56,7 +56,7 @@
     "        base = prices[0]\n",
     "        profit = 0\n",
     "\n",
-    "        for price in prices:\n",
+    "        for price in prices[1:]:\n",
     "            base = min(base, price)\n",
     "            profit = max(profit, (price - base))\n",
     "        \n",
