--- a/33. Search in Rotated Sorted Array.ipynb
+++ b/33. Search in Rotated Sorted Array.ipynb
@@ -8,13 +8,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(log(n))**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def search(self, nums, target):\n",
+    "    def search(self, nums: List[int], target: int) -> int:\n",
     "        print(f\"nums = {nums}\")\n",
     "        if not nums:\n",
     "            return -1\n",
@@ -27,6 +37,7 @@
     "            if nums[mid] == target:\n",
     "                return mid\n",
     "\n",
+    "            # 判斷哪一部分是有序的\n",
     "            if nums[mid] < nums[right]: # mid ~ right一定有序，只需判斷target是否在區間內\n",
     "                print(f\"right({nums[mid]} ~ {nums[right]}): (nums[mid] = {nums[mid]}) < (nums[right] = {nums[right]})\")\n",
     "                if target > nums[mid] and target <= nums[right]: # 在區間內，左側邊緣+1\n",
@@ -47,7 +58,7 @@
     "                    print(f\"Not in - (target = {target}) >= (nums[mid] = {nums[mid]}) or (target = {target}) < (nums[left] = {nums[left]})\")\n",
     "                    left = mid + 1\n",
     "\n",
-    "        return -1            \n"
+    "        return -1            "
    ]
   },
   {
@@ -180,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
