--- a/1. Two Sum.ipynb
+++ b/1. Two Sum.ipynb
@@ -121,35 +121,43 @@
    "source": [
     "class Solution(object):\n",
     "    def twoSum(self, nums, target):\n",
+    "        # 複製一份原始的 nums 陣列\n",
     "        nums1 = nums.copy()\n",
+    "        # 將 nums 陣列排序\n",
     "        nums = sorted(nums)\n",
     "        print(f\"{nums = }, {target = }\\n\")\n",
     "        \n",
+    "        # 初始化左右指標\n",
     "        left = 0\n",
     "        right = len(nums) - 1\n",
+    "        # 使用雙指標法尋找兩個數字的和為目標值\n",
     "        while (nums[left] + nums[right]) != target:\n",
     "            print(f\"original: left = {left}, right = {right}\")\n",
+    "            # 如果兩數之和大於目標值，右指標左移\n",
     "            if (nums[left] + nums[right]) > target:\n",
     "                print(f\"( (nums[left] = {nums[left]}) + (nums[right] = {nums[right]}) = {(nums[left] + nums[right])} ) > ( target = {target} )\")\n",
     "                right -= 1\n",
     "            else:\n",
+    "                # 如果兩數之和小於目標值，左指標右移\n",
     "                print(f\"( (nums[left] = {nums[left]}) + (nums[right] = {nums[right]}) = {(nums[left] + nums[right])} ) < ( target = {target} )\")\n",
     "                left += 1\n",
     "            print(f\"new: left = {left}, right = {right}\\n\")\n",
-    "\n",
-    "\n",
+    "        \n",
+    "        # 當找到目標值時，輸出結果\n",
     "        print(f\"end: ( (nums[left] = {nums[left]}) + (nums[right] = {nums[right]}) = {(nums[left] + nums[right])} ) == ( target = {target} )\")\n",
     "        \n",
     "        res = []\n",
+    "        # 找出原始陣列中的索引\n",
     "        for i in range(len(nums1)):\n",
     "            if (nums[left] == nums1[i]) or (nums[right] == nums1[i]):\n",
     "                res.append(i)\n",
     "                \n",
     "        return res\n",
     "\n",
+    "# 測試範例\n",
     "nums = [1, 4, 2, 7, 3, 6]\n",
     "target = 6\n",
-    "Solution().twoSum(nums, target)"
+    "Solution().twoSum(nums, target)\n"
    ]
   },
   {
