--- a/11. Container With Most Water.ipynb
+++ b/11. Container With Most Water.ipynb
@@ -9,29 +9,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def maxArea(self, height):\n",
+    "    def maxArea(self, height: List[int]) -> int:\n",
     "        left = 0\n",
     "        right = len(height) - 1\n",
-    "        water = 0\n",
+    "        area = 0\n",
+    "\n",
     "        while left < right:\n",
-    "            water = max(water, (right - left) * min(height[left], height[right]))\n",
-    "            # (right - left): X軸占的面積\n",
-    "            # min(height[left], height[right]): Y軸占的面積，須選最小的(選大的另一邊會溢出)\n",
-    "            \n",
-    "            # X軸: 從len(height)-1的長度開始逐1遞減\n",
-    "            # Y軸: x軸每次一定會遞減1，只需考慮提高Y軸的值，選最小的那邊來提升\n",
-    "            if height[left] < height[right]:\n",
-    "                left += 1\n",
-    "            else:\n",
+    "            # 計算兩指針之間的水平距離\n",
+    "            x_delta = right - left\n",
+    "            # 計算垂直高度，取兩指針所指向的高度的最小值 (取大的另一邊會溢出)\n",
+    "            y_delta = min(height[left], height[right])\n",
+    "            # 計算面積，並更新最大面積\n",
+    "            area = max(area, (x_delta * y_delta))\n",
+    "\n",
+    "            # 如果左指針所指向的高度大於右指針所指向的高度\n",
+    "            if height[left] > height[right]:\n",
+    "                # 右指針向左移動一位\n",
     "                right -= 1\n",
-    "                \n",
-    "        return water"
+    "            else:\n",
+    "                # 否則左指針向右移動一位\n",
+    "                left += 1\n",
+    "        \n",
+    "        return area"
    ]
   },
   {
@@ -72,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
