--- a/141. Linked List Cycle.ipynb
+++ b/141. Linked List Cycle.ipynb
@@ -34,10 +34,10 @@
     "        if (not head) or (not head.next):  # 如果鏈結串列為空或只有一個節點，則無環\n",
     "            return False\n",
     "\n",
-    "        slow = head # 初始化慢指針\n",
-    "        fast = head # 初始化快指針\n",
+    "        slow = head # 初始化慢指針 # space: O(1)\n",
+    "        fast = head # 初始化快指針 # space: O(1)\n",
     "\n",
-    "        while fast and fast.next: # 當快指針和快指針的下一個節點都不為空時\n",
+    "        while fast and fast.next: # 當快指針和快指針的下一個節點都不為空時  # time: O(n)\n",
     "            slow = slow.next # 慢指針每次移動一個節點\n",
     "            fast = fast.next.next # 快指針每次移動兩個節點\n",
     "            print(f\"{slow.val = }, {fast.val = }\")\n",
@@ -100,8 +100,8 @@
     "\n",
     "class Solution:\n",
     "    def hasCycle(self, head: Optional[ListNode]) -> bool:\n",
-    "        temp = dict()\n",
-    "        while head: #如果head沒有重複循環，到最後一個node後就會跳出，返回False\n",
+    "        temp = dict()   # space: O(n)\n",
+    "        while head: #如果head沒有重複循環，到最後一個node後就會跳出，返回False  # time: O(n)\n",
     "            print(id(head))\n",
     "            \n",
     "            if id(head) in temp: #如果head重複循環，新的id就會與temp中的某個id相同\n",
