--- a/206. Reverse Linked List.ipynb
+++ b/206. Reverse Linked List.ipynb
@@ -68,7 +68,7 @@
     "        # print(f\"init: {previous = }\")\n",
     "\n",
     "        # 當前節點存在時，迴圈繼續\n",
-    "        while head:\n",
+    "        while head: # time: O(n)\n",
     "            # print(\"-\" * 150)\n",
     "\n",
     "            # 保存當前節點的下一個節點\n",
@@ -188,10 +188,10 @@
     "class Solution:\n",
     "    def reverseList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
     "        # 初始化結果鏈結串列的頭部為空\n",
-    "        result = None\n",
+    "        result = None  # space: O(n)\n",
     "        \n",
     "        # 當前指標遍歷整個原始鏈結串列\n",
-    "        while head:\n",
+    "        while head: # time: O(n)\n",
     "            # 創建一個新的節點，其值為當前節點的值，下一個節點指向結果鏈結串列的頭部\n",
     "            result = ListNode(head.val, result)\n",
     "            # 將原始鏈結串列的頭部移到下一個節點\n",
