--- a/148. Sort List.ipynb
+++ b/148. Sort List.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度: O( $n log (n)$ )\n",
+    "* 空間複雜度: O( $log (n)$ )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,104 +33,70 @@
     "#     def __init__(self, val=0, next=None):\n",
     "#         self.val = val\n",
     "#         self.next = next\n",
+    "\n",
     "class Solution:\n",
-    "    def sortList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
-    "        if not head or not head.next:#如果沒有head，或head只剩一個node，就結束sortList的遞迴\n",
+    "    def sortList(self, head: Optional[ListNode]) -> Optional[ListNode]: # time complexity: O(n log n)\n",
+    "        # 若鏈結串列為空或只有一個節點，直接返回\n",
+    "        if (not head) or (not head.next):\n",
     "            return head\n",
-    "        \n",
-    "        pre, slow, fast = head, head, head\n",
-    "        while fast and fast.next:\n",
-    "            pre = slow #紀錄slow的前一個，以便之後切半\n",
+    "\n",
+    "        print(\"\\n<< sortList >>\")\n",
+    "        print(f\"{head = }\")\n",
+    "        print(\"-\" * 100)\n",
+    "\n",
+    "        # 定義三個指標：previous, fast, slow\n",
+    "        # previous：指向中間分隔點的前一個節點，用於切割鏈結串列\n",
+    "        # fast：以兩倍速度移動，用於找到鏈結串列的中間點\n",
+    "        # slow：以一倍速度移動，最終指向中間點\n",
+    "        previous, fast, slow = head, head, head\n",
+    "        while fast and fast.next: # time complexity: O(n)\n",
+    "            # 更新指標位置，previous跟隨slow移動\n",
+    "            previous = slow\n",
     "            slow = slow.next\n",
     "            fast = fast.next.next\n",
-    "        pre.next = None#切半，前半為head，後半為slow\n",
-    "        l1 = self.sortList(head)\n",
-    "        l2 = self.sortList(slow)\n",
+    "            \n",
+    "            print(f\"{fast = }\")\n",
+    "            print(f\"{slow = }\")\n",
+    "            print(\"-\" * 100)\n",
     "        \n",
-    "        return self.mergeTwoLists(l1, l2)\n",
-    "    \n",
-    "    def mergeTwoLists(self, l1, l2):\n",
-    "        head = ListNode(0)\n",
-    "        move = head#原始move\n",
-    "        while l1 and l2:\n",
-    "            #每次比較l1和l2的第一個node，較小的指定為move的下一個node，以此做排序\n",
-    "            if l1.val < l2.val:\n",
-    "                move.next = l1#指定move的下一個node\n",
-    "                l1 = l1.next#第一個node已被指定排序，開頭移到下一個node，與l2做排序比較\n",
-    "            else:\n",
-    "                move.next = l2\n",
-    "                l2 = l2.next\n",
-    "            move = move.next#move移到下一個node，才能指定之後的node (但head不會跟著移)\n",
-    "        move.next = l1 if l1 else l2#如果其中一個沒了，無法比較，此時另一個就是move的下一個node\n",
+    "        previous.next = None # 將鏈結串列切分為兩部分\n",
     "        \n",
-    "        return head.next#head初始化時第一個node指定為0，須移到第二個node才能返回"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "head = [4,2,1,3]\n",
-    "def Merge_Sort(array):\n",
-    "    if len(array) > 1:\n",
-    "        mid = len(array) // 2\n",
-    "        left_array = array[:mid]\n",
-    "        right_array = array[mid:]\n",
+    "        print(f\"{head = }\")\n",
+    "        print(f\"{slow = }\")\n",
     "\n",
-    "        Merge_Sort(left_array)\n",
-    "        Merge_Sort(right_array)\n",
+    "        # 遞迴地對左、右兩部分進行排序，time complexity: O(log n)、space complexity: O(log n)\n",
+    "        left = self.sortList(head) \n",
+    "        right = self.sortList(slow)\n",
     "\n",
-    "        right_index = 0\n",
-    "        left_index = 0\n",
-    "        merged_index = 0\n",
-    "        while right_index < len(right_array) and left_index < len(left_array):\n",
-    "            if(right_array[right_index] < left_array[left_index]):\n",
-    "                array[merged_index] = right_array[right_index]\n",
-    "                right_index += 1\n",
+    "        return self.mergeList(left, right) # 合併已排序的左右部分並返回，time complexity: O(n)、space complexity: O(1)\n",
+    "\n",
+    "    def mergeList(self, left, right): # time complexity: O(n)\n",
+    "        print(f\"\\n<< mergeList >>\")\n",
+    "        \n",
+    "        head = ListNode(0) # 定義虛擬頭節點，以便於處理\n",
+    "        move = head  # move 指向目前的最後一個節點，用於合併鏈結串列\n",
+    "\n",
+    "        # 將left和right的節點依序合併\n",
+    "        while left and right: # time complexity: O(n)\n",
+    "            # 比較left和right當前節點的值，將較小的節點連接到結果鏈結串列\n",
+    "            if left.val > right.val:\n",
+    "                move.next = right  # 將right當前節點連接到move後\n",
+    "                right = right.next  # 移動right指標至下一個節點\n",
     "            else:\n",
-    "                array[merged_index] = left_array[left_index]\n",
-    "                left_index += 1\n",
+    "                move.next = left  # 將left當前節點連接到move後\n",
+    "                left = left.next  # 移動left指標至下一個節點\n",
+    "            move = move.next  # 移動move指標至新加入的節點\n",
     "\n",
-    "            merged_index += 1\n",
+    "            print(f\"{head = }\")\n",
     "\n",
-    "        while right_index < len(right_array):\n",
-    "            array[merged_index] = right_array[right_index]\n",
-    "            right_index += 1\n",
-    "            merged_index += 1\n",
+    "        # 若left或right尚有剩餘節點，直接連接到結果鏈結串列的最後\n",
+    "        move.next = left if left else right\n",
+    "        \n",
+    "        print(f\"{head.next = }\") \n",
     "\n",
-    "        while left_index < len(left_array):\n",
-    "            array[merged_index] = left_array[left_index]\n",
-    "            left_index += 1\n",
-    "            merged_index += 1\n",
-    "    # print(array)\n",
-    "\n",
-    "Merge_Sort(head)\n",
-    "print(head)"
+    "        # 返回真正的排序後的鏈結串列頭節點\n",
+    "        return head.next\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
