--- a/148. Sort List.ipynb
+++ b/148. Sort List.ipynb
@@ -18,8 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 時間複雜度: O( $n log (n)$ )\n",
-    "* 空間複雜度: O( $log (n)$ )"
+    "* 時間複雜度: O( $n\\ log\\ n$ )\n",
+    "* 空間複雜度: O( $log\\ n$ )"
    ]
   },
   {
