--- a/56. Merge Intervals.ipynb
+++ b/56. Merge Intervals.ipynb
@@ -11,9 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. 按list裡的第1個值排序\n",
-    "#### 2. res裡先放入第0個list\n",
-    "#### 3. 依序抓出第1個之後的list，如果最後一個res的尾值大於抓出的list的尾值時，表示該list包含在最後一個res中，不做任何事;否則如果res最後一個的尾值大於抓出的list的首值時，表示有部分重疊，需將res的尾值改成抓出的list的尾值;否則，表示皆無重疊，直接新增list在res中。"
+    "* 時間複雜度: O( $n\\ log\\ n$ )\n",
+    "* 空間複雜度: O( $n$ )"
    ]
   },
   {
@@ -24,49 +23,32 @@
    "source": [
     "class Solution:\n",
     "    def merge(self, intervals: List[List[int]]) -> List[List[int]]:\n",
-    "        intervals.sort(key = lambda X: X[0])#按list裡的第1個值排序\n",
-    "        res = [intervals[0]] #res裡先放入第0個list\n",
-    "        for i in intervals[1:]:\n",
-    "            if res[-1][1] >= i[1]: \n",
-    "            #如果最後一個res的尾值大於抓出的list的尾值時，表示該list包含在最後一個res中，不做任何事\n",
-    "                continue\n",
-    "            elif res[-1][1] >= i[0]: \n",
-    "            #否則如果res最後一個的尾值大於抓出的list的首值時，表示有部分重疊，需將res的尾值改成抓出的list的尾值\n",
-    "                res[-1][1] = i[1]\n",
-    "            else:\n",
-    "            #否則，表示皆無重疊，直接新增list在res中\n",
-    "                res.append(i)\n",
-    "                \n",
-    "        return res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. 按list裡的第1個值排序\n",
-    "#### 2. res裡先放入第0個list\n",
-    "#### 3. 依序抓出第1個之後的list，如果抓出的list的首值小於等於res最後一個的尾值時，表示有部分重疊，需將res的尾值與抓出的list的尾值做比較，以較大的取代res的尾值;否則，表示皆無重疊，直接新增list在res中。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def merge(self, intervals: List[List[int]]) -> List[List[int]]:\n",
-    "        intervals.sort(key = (lambda X: X[0])) # 按list裡的第1個值排序\n",
+    "        # 先將 intervals 根據每個區間的起始值進行排序，以方便後續合併\n",
+    "        intervals = sorted(intervals) # time: O(nlogn), space: O(n)\n",
+    "        # print(f\"{intervals = }\")\n",
     "\n",
-    "        res = [intervals[0]] # res裡先放入第0個list\n",
-    "        for i in range(1, len(intervals)):\n",
-    "            if intervals[i][0] <= res[-1][-1]: # 抓出的list的首值小於等於res最後一個的尾值\n",
-    "                res[-1][-1] = max(intervals[i][-1], res[-1][-1]) # 需將res的尾值與抓出的list的尾值做比較，以較大的取代res的尾值\n",
+    "        # 初始化結果列表，並將第一個區間放入結果中\n",
+    "        result = [intervals[0]] # space: O(n)\n",
+    "        # print(f\"{result = }\")\n",
+    "\n",
+    "        # 從第二個區間開始遍歷每個區間\n",
+    "        for interval in intervals[1:]: # time: O(n)\n",
+    "            # print(f\"{interval = }\")\n",
+    "\n",
+    "            # 判斷\"當前區間\"是否與\"結果列表中最後一個區間\"重疊\n",
+    "            if result[-1][1] < interval[0]:\n",
+    "                # print(f\"if\\n{result[-1][1]} < {interval[0]}\")\n",
+    "                result.append(interval) # 沒有重疊，將當前區間加入結果列表\n",
     "            else:\n",
-    "                res.append(intervals[i]) # 皆無重疊，直接新增list在res中\n",
+    "                # print(f\"else\\n{result[-1][1]} >= {interval[0]}\")\n",
+    "                # print(f\"{result[-1][1] =} = max({result[-1][1]}, {interval[1]})\")\n",
+    "                \n",
+    "                result[-1][1] = max(result[-1][1], interval[1])  # 重疊，將結果列表中最後一個區間的結束值更新為兩者之中較大的結束值\n",
+    "            \n",
+    "            # print(f\"{result = }\")\n",
+    "            # print(\"-\" * 100)\n",
     "        \n",
-    "        return res"
+    "        return result"
    ]
   }
  ],
