--- a/167. Two Sum II - Input Array Is Sorted.ipynb
+++ b/167. Two Sum II - Input Array Is Sorted.ipynb
@@ -15,37 +15,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度: O( $n$ )\n",
+    "* 空間複雜度: O( $1$ )"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
     "class Solution:\n",
     "    def twoSum(self, numbers: List[int], target: int) -> List[int]:\n",
-    "        # for i in range(len(numbers)):\n",
-    "        #     if (target - numbers[i]) in numbers[i+1 :]:\n",
-    "        #         output = [i+1, numbers[i + 1:].index(target - numbers[i]) + (i + 1)+1]\n",
-    "        # return output\n",
-    "    \n",
-    "    \n",
-    "        left, right = 0, len(numbers) - 1\n",
-    "        while True:\n",
-    "            tmp = numbers[left] + numbers[right]\n",
-    "            if tmp == target:\n",
+    "        # space: O(1)\n",
+    "        left = 0 # 左指針指向數列的開頭\n",
+    "        right = len(numbers) - 1 # 右指針指向數列的結尾\n",
+    "\n",
+    "        # 當左指針小於右指針時，進行迴圈 # time: O(n)\n",
+    "        while left < right:\n",
+    "            # 如果左右指針和等於 target，返回對應的索引值(索引值從1開始)\n",
+    "            if numbers[left] + numbers[right] == target:\n",
     "                return [left + 1, right + 1]\n",
-    "            elif tmp < target:\n",
-    "                left += 1\n",
-    "            elif tmp > target:\n",
-    "                right -= 1"
+    "            \n",
+    "            # 如果左右指針和大於 target\n",
+    "            elif numbers[left] + numbers[right] > target:\n",
+    "                # 右指針向左移動（減小總和）\n",
+    "                right -= 1\n",
+    "\n",
+    "            # 如果左右指針和小於 target\n",
+    "            else:\n",
+    "                # 左指針向右移動（增加總和）\n",
+    "                left += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nnumbers = [2,7,11,15]\n",
+    "target = 9\n",
+    " # [1, 2]\n",
+    "\n",
+    "Solution().twoSum(nnumbers, target)"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ac5c71763ce4af7d6dc057106aa53cb2371e41115cfc9dc46f264378d07e5f1a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
