--- a/15. 3Sum.ipynb
+++ b/15. 3Sum.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**時間複雜度: O(n^2)**  \n",
-    "**空間複雜度: O(n^2)**"
+    "**時間複雜度: O( $n^2$ )**   \n",
+    "**空間複雜度: O( $n^2$ )** "
    ]
   },
   {
@@ -26,7 +26,7 @@
     "        nums.sort() # 將輸入的數組進行排序 # time: O(nlogn), space: O(1)\n",
     "        print(f\"nums = {nums}\")\n",
     "\n",
-    "        res = [] # space: O(n^2)，所有三元組都有效\n",
+    "        result = [] # space: O(n^2)，所有三元組都有效\n",
     "        # 遍歷數組，直到倒數第三個元素 # time: O(n^2)\n",
     "        for i in range(len(nums)-2): # time: O(n)\n",
     "            print(f\"{'-'*100}\") \n",
@@ -46,8 +46,8 @@
     "                print(f\"nums[i]({nums[i]}) + nums[left]({nums[left]}) + nums[right]({nums[right]}) = {total} = total\")\n",
     "                \n",
     "                if total == 0:\n",
-    "                    res.append([nums[i], nums[left], nums[right]]) # 若和為0，則將這組數添加到結果列表中\n",
-    "                    print(f\"res = {res}\")\n",
+    "                    result.append([nums[i], nums[left], nums[right]]) # 若和為0，則將這組數添加到結果列表中\n",
+    "                    print(f\"res = {result}\")\n",
     "\n",
     "                    # 移動左指針，跳過所有重複的元素\n",
     "                    while (left < right) and (nums[left+1] == nums[left]):\n",
@@ -72,7 +72,7 @@
     "                    right -= 1\n",
     "                    print(f\"total > 0, new: i = {i}, left = {left}, right = {right}\")\n",
     "    \n",
-    "        return res  # 返回結果列表\n"
+    "        return result  # 返回結果列表\n"
    ]
   },
   {
@@ -144,7 +144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   },
   "orig_nbformat": 4
  },
