--- a/11. Container With Most Water.ipynb
+++ b/11. Container With Most Water.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,15 @@
     "\n",
     "class Solution:\n",
     "    def maxArea(self, height: List[int]) -> int:\n",
-    "        left = 0\n",
-    "        right = len(height) - 1\n",
-    "        area = 0\n",
+    "        left = 0 # space: O(1)\n",
+    "        right = len(height) - 1 # space: O(1)\n",
+    "        area = 0 # space: O(1)\n",
     "\n",
-    "        while left < right:\n",
+    "        while left < right: # time: O(n)\n",
     "            # 計算兩指針之間的水平距離\n",
-    "            x_delta = right - left\n",
+    "            x_delta = right - left # time: O(1), space: O(1)\n",
     "            # 計算垂直高度，取兩指針所指向的高度的最小值 (取大的另一邊會溢出)\n",
-    "            y_delta = min(height[left], height[right])\n",
+    "            y_delta = min(height[left], height[right]) # time: O(1), space: O(1)\n",
     "            # 計算面積，並更新最大面積\n",
     "            area = max(area, (x_delta * y_delta))\n",
     "\n",
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
