--- a/643. Maximum Average Subarray I.ipynb
+++ b/643. Maximum Average Subarray I.ipynb
@@ -11,44 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/643.jpg\" style=\"zoom:50%\"/>"
+    "**時間複雜度: O( $n$ )**   \n",
+    "**空間複雜度: O( $1$ )** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution(object):\n",
-    "    def findMaxAverage(self, nums, k):\n",
-    "        \"\"\"\n",
-    "        :type nums: List[int]\n",
-    "        :type k: int\n",
-    "        :rtype: float\n",
-    "        \"\"\"\n",
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def findMaxAverage(self, nums: List[int], k: int) -> float:\n",
+    "        print(f\"{nums=}, {k=}\\n\")\n",
+    "\n",
+    "        total = sum(nums[:k])  # 計算初始的 k 個元素總和 # time: O(k), space: O(1)\n",
+    "        result = total         # 初始化最大總和 # space: O(1)\n",
+    "        print(f\"{total=}, {result=}\")\n",
+    "\n",
+    "        for i in range(k, len(nums)): # time: O(n)\n",
+    "            total += nums[i] - nums[i - k]  # 更新滑動窗口的總和\n",
+    "            result = max(result, total)    # 更新最大總和\n",
+    "            print(f\"{total=}, {result=}\")\n",
     "        \n",
-    "        # a =  [0 for _ in range(len(nums))]\n",
-    "        # a[0] = nums[0]\n",
-    "        # for i in range(1, len(nums)):\n",
-    "        #     a[i] = a[i-1] + nums[i]\n",
-    "\n",
-    "        # b = a[k-1]\n",
-    "        # for i in range(k, len(a)):\n",
-    "        #     b =  max(b, a[i] - a[i-k])\n",
-    "\n",
-    "        # return b * 1.0 / k\n",
-    "\n",
-    "        sum = 0\n",
-    "        a = float('-inf')\n",
-    "        for i in range(len(nums)):\n",
-    "            sum += nums[i]\n",
-    "            if i >= k:\n",
-    "                sum -= nums[i - k]\n",
-    "            if i >= k - 1:\n",
-    "                a = max(a, sum)\n",
-    "                \n",
-    "        return a / float(k)"
+    "        return result / k  # 回傳最大平均值        "
    ]
   },
   {
@@ -56,6 +44,17 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nums=[1, 12, -5, -6, 50, 3], k=4\n",
+      "\n",
+      "total=2, result=2\n",
+      "total=51, result=51\n",
+      "total=42, result=51\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -69,33 +68,16 @@
    ],
    "source": [
     "nums = [1,12,-5,-6,50,3]\n",
-    "k = 4\n",
+    "k = 4 \n",
+    "# 12.75\n",
     "\n",
-    "sum = 0\n",
-    "a = float('-inf')\n",
-    "for i in range(len(nums)):\n",
-    "    sum += nums[i]\n",
-    "    if i >= k:\n",
-    "        sum -= nums[i - k]\n",
-    "    if i >= k - 1:\n",
-    "        a = max(a, sum)\n",
-    "a / float(k)"
+    "Solution().findMaxAverage(nums, k)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ac5c71763ce4af7d6dc057106aa53cb2371e41115cfc9dc46f264378d07e5f1a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -109,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
